fixed overflow in Choropleth Map

--- a/src/ChoroplethMap.scss
+++ b/src/ChoroplethMap.scss
@@ -1,7 +1,7 @@
 .choropleth-map-page {
   display: flex;
   flex-direction: column;
-  align-items: center;
+  text-align: center;
 
   #description {
     font-size: 20px;
@@ -18,6 +18,8 @@
     flex-direction: column;
     align-items: center;
     position: relative;
+    margin-left: auto;
+    margin-right: auto;
   }
 
   #legend {
